FIX footer paragraph to vertically align with footer image

--- a/styles.css
+++ b/styles.css
@@ -155,5 +155,5 @@ footer img {
 
 div > p {
     display: flex;
-    justify-self: center;
+    align-items: center;
 }
